Added OpenAI prompting

--- a/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb
+++ b/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb
@@ -1404,6 +1404,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b27f2075-8cb9-4ad1-8a83-f075f88352ed",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3.1:\n",
+    "\n",
+    "Modificar los numeros 2, 13 y 21 a 100 utilizando indices dentro de los corchetes los indices de dichos numeros son (0,2),(2,3),(4,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "065990e6-e40a-4097-a37b-a4d58430a6f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c8492c-bb18-41d3-9382-a3080babdd55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#No modificar este codigo y verificar que coincide con el resultado esperado\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df974655-81ee-4087-a486-7247cde471d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 3.1 {display-mode:\"form\"}\n",
+    "\n",
+    "a[[0,2,4],[2,3,1]] = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "285f82bb-da20-4e72-99ce-6a6332950cab",
    "metadata": {},
    "source": [
