--- a/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
@@ -5,7 +5,7 @@
    "id": "c08833d7-54cd-495e-8eb8-1c60721d5d1d",
    "metadata": {},
    "source": [
-    "# ChatGPT Prompting 1"
+    "# ChatGPT Prompting"
    ]
   },
   {
@@ -27,13 +27,12 @@
    "source": [
     "import openai\n",
     "\n",
-    "#Load token from google drive\n",
+    "#Cargar token desde google drive\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
-    "with open('drive/MyDrive/Tokens/openai.text','r') as f:\n",
+    "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
     "    token = f.read()\n",
-    "    openai.api_key = token\n",
-    "    print(token)"
+    "    openai.api_key = token"
    ]
   },
   {
@@ -487,39 +486,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df6dd85-7249-45d5-8978-21efe37fca20",
-   "metadata": {},
-   "source": [
-    "#### Notes on using the OpenAI API outside of this classroom\n",
-    "\n",
-    "To install the OpenAI Python library:\n",
-    "```\n",
-    "!pip install openai\n",
-    "```\n",
-    "\n",
-    "The library needs to be configured with your account's secret key, which is available on the [website](https://platform.openai.com/account/api-keys). \n",
-    "\n",
-    "You can either set it as the `OPENAI_API_KEY` environment variable before using the library:\n",
-    " ```\n",
-    " !export OPENAI_API_KEY='sk-...'\n",
-    " ```\n",
-    "\n",
-    "Or, set `openai.api_key` to its value:\n",
-    "\n",
-    "```\n",
-    "import openai\n",
-    "openai.api_key = \"sk-...\"\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c8de87fb-bc07-4e02-8cb9-2f8affd4a131",
    "metadata": {},
    "source": [
-    "#### A note about the backslash\n",
-    "- In the course, we are using a backslash `\\` to make the text fit on the screen without inserting newline '\\n' characters.\n",
-    "- GPT-3 isn't really affected whether you insert newline characters or not.  But when working with LLMs in general, you may consider whether newline characters in your prompt may affect the model's performance."
+    "#### Nota sobre la barra invertida\n",
+    "- Utilizamos la barra invertida `\\` para hacer que el texto entre en la pantalla sin insertar una nueva linea '\\n'.\n",
+    "- GPT-3 no es afectado por los caracteres de nueva linea.  Pero cuando trabajamos con LLMs en general, hay que considerar como esto puede afectar los resultados."
    ]
   },
   {
