Added parser to langchain

--- a/cursos/espanol/deeplearning/LangChain.ipynb
+++ b/cursos/espanol/deeplearning/LangChain.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "chat = ChatOpenAI(temperature=0.0, model=llm_model)\n",
+    "chat = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
     "chat"
    ]
   },
@@ -75,8 +75,8 @@
     "prompt_template = ChatPromptTemplate.from_template(template_string)\n",
     "\n",
     "message = prompt_template.format_messages(\n",
-    "                    estilo=\"pato donald\",\n",
-    "                    texto=\"Estimado Mickey, hoy no podre ir a tomar \\\n",
+    "                    estilo=\"rapero\",\n",
+    "                    texto=\"Estimado Carlos, hoy no podre ir a tomar \\\n",
     "                    el te a tu casa porque estoy resfriado.\")\n",
     "\n",
     "response = chat(message)"
@@ -86,6 +86,103 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d284fbd6-4b24-4b1d-8239-2720d59bac3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import ResponseSchema\n",
+    "from langchain.output_parsers import StructuredOutputParser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ee1bdb3-8d7f-4d65-98c9-e1672883619d",
+   "metadata": {},
+   "source": [
+    "### Genero el schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e6ba52a-3b3c-41ca-887b-09546f1d6cbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precio_schema = ResponseSchema(name=\"precio\",\n",
+    "                             description=\"Cual ha sido el precio pagado?\\\n",
+    "                             Si no se encuentra la informacion devolver -1.\")\n",
+    "calificacion_schema = ResponseSchema(name=\"calificacion\",\n",
+    "                                      description=\"Que calificacion se le asigno al restaurante?\\\n",
+    "                                      Si no se encuentra la informacion devolver -1.\")\n",
+    "\n",
+    "response_schemas = [precio_schema, \n",
+    "                    calificacion_schema]\n",
+    "\n",
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
+    "format_instructions = output_parser.get_format_instructions()\n",
+    "print(format_instructions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84a0a7b8-bede-426e-bff3-88009afa1742",
+   "metadata": {},
+   "source": [
+    "### Consulto al LLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65672fb9-4f82-48f0-bc3a-9e7940593983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_template_2 = \"\"\"\\\n",
+    "Para el siguiente texto obtener la siguiente informacion:\n",
+    "\n",
+    "precio: Cual ha sido el precio pagado?\\\n",
+    "Si no se encuentra la informacion devolver -1.\n",
+    "\n",
+    "calificacion: Que calificacion se le asigno al restaurante?\\\n",
+    "Si no se encuentra la informacion devolver -1.\n",
+    "\n",
+    "text: {text}\n",
+    "\n",
+    "{format_instructions}\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(template=review_template_2)\n",
+    "\n",
+    "messages = prompt.format_messages(text=customer_review, \n",
+    "                                format_instructions=format_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59d9c945-8de6-4a81-a002-aade247f8dc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = chat(messages)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9b337c1-2b98-41b5-8563-31d9d9a67a4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dict = output_parser.parse(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db189017-eac0-4857-b9ec-c330ece271ca",
    "metadata": {},
    "outputs": [],
    "source": []
