--- a/cursos/espanol/deeplearning/LangChain.ipynb
+++ b/cursos/espanol/deeplearning/LangChain.ipynb
@@ -79,7 +79,16 @@
     "                    texto=\"Estimado Carlos, hoy no podre ir a tomar \\\n",
     "                    el te a tu casa porque estoy resfriado.\")\n",
     "\n",
-    "response = chat(message)"
+    "response = chat(message)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c6d859-ee5c-4755-bf60-e239be536589",
+   "metadata": {},
+   "source": [
+    "## Parsear la salida"
    ]
   },
   {
@@ -138,6 +147,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "customer_review = \"\"\"\\\n",
+    "La comida fue espectacular, lo mejor la tortilla de patatas \\\n",
+    "y la tarta de queso. El precio bien, en total costo 23 euros.\n",
+    "Le doy una calificacion de 8.3.\n",
+    "\"\"\"\n",
+    "\n",
     "review_template_2 = \"\"\"\\\n",
     "Para el siguiente texto obtener la siguiente informacion:\n",
     "\n",
@@ -147,7 +162,7 @@
     "calificacion: Que calificacion se le asigno al restaurante?\\\n",
     "Si no se encuentra la informacion devolver -1.\n",
     "\n",
-    "text: {text}\n",
+    "texto: {texto}\n",
     "\n",
     "{format_instructions}\n",
     "\"\"\"\n",
@@ -176,7 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dict = output_parser.parse(response.content)"
+    "output_dict = output_parser.parse(response.content)\n",
+    "print(output_dict)"
    ]
   },
   {
