--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install transformers[torch]\n",
-    "!pip install datasets"
+    "!pip install transformers[torch] --quiet\n",
+    "!pip install datasets --quiet"
    ]
   },
   {
@@ -62,6 +62,14 @@
     "- [Snaks 110MB](https://huggingface.co/datasets/Matthijs/snacks)\n",
     "- [Flores 347MB](https://huggingface.co/datasets/nelorth/oxford-flowers)\n",
     "- [RayosX Pulmones 203MB](https://huggingface.co/datasets/keremberke/chest-xray-classification)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b3cc136-a95b-45ad-ba57-ede7573fb7b5",
+   "metadata": {},
+   "source": [
+    "Aqui seleccionaremos el de analisis de emociones faciales. Como tarea podemos seleccionar otro de los propuestos y realizar el debido finetuning."
    ]
   },
   {
@@ -120,6 +128,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11bcd2af-b39d-4343-8327-627f6a56ea6a",
+   "metadata": {},
+   "source": [
+    "Creamos una funcion para ver algunos ejemplos de las imagenes cargadas del dataset:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9eb4ca25-429f-4477-b598-8f1357c59071",
@@ -159,7 +175,9 @@
    "id": "c0ac8134-6b2c-4829-9905-d0a08dd214ca",
    "metadata": {},
    "source": [
-    "## Convertir la imagen a la entrada que necesita el modelo"
+    "## Convertir la imagen a la entrada que necesita el modelo\n",
+    "\n",
+    "Aqui utilizamos una clase que nos permite transformar las imagenes a la entrada que necesita el modelo:"
    ]
   },
   {
@@ -170,7 +188,6 @@
    "outputs": [],
    "source": [
     "from transformers import ViTImageProcessor\n",
-    "\n",
     "model_name_or_path = 'google/vit-base-patch16-224-in21k'\n",
     "processor = ViTImageProcessor.from_pretrained(model_name_or_path)"
    ]
@@ -206,7 +223,6 @@
    "outputs": [],
    "source": [
     "def transform(example_batch):\n",
-    "    # Take a list of PIL images and turn them to pixel values\n",
     "    inputs = processor([x for x in example_batch['image']], return_tensors='pt').to(device)\n",
     "    inputs['labels'] = torch.tensor(example_batch['label']).to(device)\n",
     "    return inputs"
@@ -227,7 +243,9 @@
    "id": "539b869e-a166-49a1-90fa-10b2007ff0ec",
    "metadata": {},
    "source": [
-    "## Create la funcion para darle de comer al modelo"
+    "## Crear la funcion para darle de comer al modelo\n",
+    "\n",
+    "Aqui creamos la funcion que va a pasarle al modelo los ejemplos en tandas o batches:"
    ]
   },
   {
