--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6c4154d8-aeb6-4a62-a2f3-18d41afb7f00",
+   "metadata": {},
+   "source": [
+    "# Prediccion del Genero de una Pelicula \n",
+    "\n",
+    "Esta unidad se basa en la siguiente competencia: https://huggingface.co/spaces/competitions/movie-genre-prediction \n",
+    "\n",
+    "Dada una tabla en la que tenemos el titulo de una pelicula, su sinopsis y el genero al que pertenece debemos entrenar un algoritmo de Machine Learning para que pueda predecir el genero de nuevas peliculas de acuerdo a su titulo y sinopsis.\n",
+    "\n",
+    "Para ello iremos recorriendo como hacerlo desde una solucion de base que es la que veremos en esta notebook hasta llegar a implementar un ensamble de Transformers ajustados con sintonia fina.\n",
+    "\n",
+    "En esta notebook lo unico que haremos es detectar si la sinopsis incluye alguna de las palabras que definen el genero, como fantasia, horror, accion, etc. Si alguna de estas esta presente en la sinopsis entonces definimos que el genero debe ser el correspondiente sino le asignamos el genero de accion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1753820b-f2b5-4c08-bd50-26676cb6c8fc",
+   "metadata": {},
+   "source": [
+    "## Solucion Baseline (la mas simple)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ca3bad83-5c22-41fe-b09a-90c49ad51f71",
@@ -26,7 +50,7 @@
     }
    ],
    "source": [
-    "!pip install pyarrow"
+    "!pip install pyarrow --quiet"
    ]
   },
   {
