--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7e8e8877-0df8-48bb-9a49-50439411e8fb",
+   "metadata": {},
+   "source": [
+    "# Prediccion del Genero de una Pelicula\n",
+    "\n",
+    "## Solucion Bag of Words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ca3bad83-5c22-41fe-b09a-90c49ad51f71",
@@ -313,6 +323,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9392f5c-1ff3-41c2-be07-26c1ab077d0f",
+   "metadata": {},
+   "source": [
+    "### Concateno el titulo y la sinopsis "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "e583deab-a6ee-489b-84ec-3609aa8c9bc1",
@@ -433,6 +451,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c66370d2-9695-46f5-8fbb-74837064bcff",
+   "metadata": {},
+   "source": [
+    "### Divido el dataset en entrenamiento y evaluacion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "959a7daf-226a-43c2-9e2a-2e396d7eed42",
@@ -469,6 +495,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "034ba961-fe83-4714-ab01-27c9d43ff2d5",
+   "metadata": {},
+   "source": [
+    "### Creo el bag of words utilizando CountVectorizer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "ab7fa12e-fc10-4d80-a1a0-3177fe8aa2e6",
@@ -478,6 +512,14 @@
     "#from sklearn.feature_extraction.text import CountVectorizer\n",
     "#vectorizer = CountVectorizer(max_features=8000, stop_words='english')\n",
     "#X_train_vect = vectorizer.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a74df09e-0c88-4f59-813b-4138114b3380",
+   "metadata": {},
+   "source": [
+    "### Creo el bag of words utilizando TfidfVectorizer"
    ]
   },
   {
@@ -517,6 +559,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4683c4bf-96d0-4c45-b857-fff733bf296d",
+   "metadata": {},
+   "source": [
+    "### Creo un modelo de regresion lineal y lo evaluo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "137cc29d-409d-404e-982b-56077ec9c5f7",
@@ -526,6 +576,14 @@
     "#from sklearn.linear_model import LogisticRegression\n",
     "#clf = LogisticRegression(random_state=0, max_iter=1000).fit(X_train_vect, y_train)\n",
     "#clf.predict(X_train_vect[:2, :])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc281ba9-f49a-4a99-9426-f72e7beb6310",
+   "metadata": {},
+   "source": [
+    "### Creo un modelo de Multinomial Naive Bayes y lo evaluo"
    ]
   },
   {
