--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb
@@ -7,7 +7,13 @@
     "id": "78eea316-ba3a-4576-9545-af05630c6ef1"
    },
    "source": [
-    "# Ensemble"
+    "# Prediccion del Genero de una Pelicula\n",
+    "\n",
+    "# Ensemble de Transformers\n",
+    "\n",
+    "Aqui hacemos un ensemble de dos modelos:\n",
+    "- [Roberta Large](https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer_roberta_large_save_probs.ipynb)\n",
+    "- [Xlnet Large](https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer_xlnet_large_save_probs.ipynb) "
    ]
   },
   {
