--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb
@@ -7,13 +7,9 @@
     "id": "78eea316-ba3a-4576-9545-af05630c6ef1"
    },
    "source": [
-    "# NLP con Deep Learning: Transformers\n",
+    "# Prediccion del Genero de una Pelicula\n",
     "\n",
-    "- [Curso simple Coursera](https://www.coursera.org/)\n",
-    "\n",
-    "- [Curso Avanzado Stanford](https://web.stanford.edu/class/cs224n/index.html#schedule)\n",
-    "\n",
-    "- [Implementar Transformers para Clasificacion](https://huggingface.co/transformers/v3.2.0/custom_datasets.html)"
+    "## Solucion con Finetuning de Transformer"
    ]
   },
   {
@@ -2258,6 +2254,28 @@
     "from google.colab import files\n",
     "files.download('submission4.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fffc2538-b1a9-421f-ab94-3ce35d43025e",
+   "metadata": {},
+   "source": [
+    "### Referencias:\n",
+    "\n",
+    "- [Curso simple Coursera](https://www.coursera.org/)\n",
+    "\n",
+    "- [Curso Avanzado Stanford](https://web.stanford.edu/class/cs224n/index.html#schedule)\n",
+    "\n",
+    "- [Implementar Transformers para Clasificacion](https://huggingface.co/transformers/v3.2.0/custom_datasets.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "710140fd-1509-4c25-a9a7-b3e4cb07fa74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
