--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -196,12 +196,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db189017-eac0-4857-b9ec-c330ece271ca",
+   "cell_type": "markdown",
+   "id": "150049ac-d851-49b9-8727-051927f0c8d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Referencias:\n",
+    "- https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/\n",
+    "- https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00a85135-9226-4042-aaff-f26105f5ef62",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
   }
  ],
  "metadata": {
