Updated seaborn plots

--- a/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
@@ -242,6 +242,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5acf156d-e531-4191-9404-d62d45056bc5",
+   "metadata": {},
+   "source": [
+    "## Seleccionar el estilo grafico\n",
+    "\n",
+    "Seaborn permite seleccionar el estilo grafico. Es decir podemos especificar cosas como la paleta de colores, la grilla de fondo, el tamaño de las figuras y muchas cosas mas. Lo recomendable es hacer esto al inicio luego de importar la libreria para que todos los graficos tengan el mismo estilo. Para ello utilizaremos la funcion [set_theme()](https://seaborn.pydata.org/generated/seaborn.set_theme.html#seaborn.set_theme)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "446511da-2bea-4fac-b59b-07ce2b7372fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set_theme(style=\"whitegrid\", \n",
+    "              palette=\"pastel\",\n",
+    "              rc={'figure.figsize':(11,8)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a32dbc2b-c836-422c-b6f2-fa69a01e3213",
+   "metadata": {},
+   "source": [
+    "Puedes ejecutar el codigo anterior y crear nuevamente los graficos para ver como los graficos cambian de estilo, luego cambiar los parametros y ver nuevamente las diferencias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96855392-0baa-4221-bb5a-efe1ea6f6f61",
+   "metadata": {},
+   "source": [
+    "## Matplotlib para mas control del grafico\n",
+    "\n",
+    "Para mas control sobre cada parametro de un grafico individual podemos utilizar seaborn en combinacion con matplotlib que nos permite manipular cada detalle del grafico como veremos en la siguiente unidad sobre [Matplotlib](https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb). Para combinar el uso de ambas librerias lo podemos hacer de la siguiente forma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76237be1-3571-4943-9419-5e6b277a0e9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(4, 2))\n",
+    "sns.boxplot(ax=ax, data=tips, x=\"total_bill\")\n",
+    "ax.set_title(\"Combinando seaborn con matplotlib\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24af7464-e327-489a-a041-e80f9574e2d6",
    "metadata": {
     "tags": []
@@ -530,6 +586,28 @@
     "#@title Solucion Ejercicio 7 {display-mode:\"form\"}\n",
     "\n",
     "sns.boxplot(data=titanic, x='class', y='age');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39543d47-fc61-44fe-aa3f-dd10cb8b89f3",
+   "metadata": {},
+   "source": [
+    "#### El grafico de cajas (boxplot)\n",
+    "\n",
+    "El grafico de cajas nos permite ver los siguiente valores de una distribucion:\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/boxplot.jpeg\" width=\"600\"/>\n",
+    "</div>\n",
+    "\n",
+    "[imagen obtenida de wikipedia](https://es.wikipedia.org/wiki/Diagrama_de_caja)\n",
+    "\n",
+    "- Q1 (25% de los datos)\n",
+    "- Q2 o mediana (el 50% de los datos)\n",
+    "- Q3 (75% de los datos)\n",
+    "- Rango intercuartílico (RIC): Q3–Q1\n",
+    "- Valores atipicos o outliers: son valores inferiores a Q1–1.5·RIC o superiores a Q3+1.5·RIC\n"
    ]
   },
   {
