--- a/cursos/espanol/deeplearning/6_obtener_vectores.ipynb
+++ b/cursos/espanol/deeplearning/6_obtener_vectores.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Our sentences we like to encode\n",
+    "#Textos a vectorizar\n",
     "sentences = [\n",
     "    'Los pajaros vuelan hacia el sur en una tarde fria.',\n",
     "    'Parrilla de acero inoxidable para barbacoa.',\n",
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Sentences are encoded by calling model.encode()\n",
+    "#Las frases son vectorizadas llamando a model.encode()\n",
     "output = model.encode(sentences)"
    ]
   },
