Added reference to deeplearning.ai

--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -201,7 +201,8 @@
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "- https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/\n",
+    "Esta unidad es un resumen traducido con algunas modificacione del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/)\n",
+    "\n",
     "- https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/"
    ]
   },
