--- a/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
@@ -5,7 +5,11 @@
    "id": "c08833d7-54cd-495e-8eb8-1c60721d5d1d",
    "metadata": {},
    "source": [
-    "# ChatGPT Prompting"
+    "# ChatGPT Prompting\n",
+    "\n",
+    "En esta unidad veremos como utilizar la libreria de OpenAI para realizar consultas a ChatGPT y poder utilizar sus respuestas para luego crear un programa mas complejo.\n",
+    "\n",
+    "Esta unidad es un resumen traducido con algunas modificacione del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/)"
    ]
   },
   {
