--- a/cursos/espanol/deeplearning/LangChain_Chains.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Chains.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "Esta unidad es un resumen traducido con algunas modificacione del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/)"
+    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/)"
    ]
   },
   {
