--- a/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "En esta unidad veremos como utilizar la libreria de OpenAI para realizar consultas a ChatGPT y poder utilizar sus respuestas para luego crear un programa mas complejo.\n",
     "\n",
-    "Esta unidad es un resumen traducido con algunas modificacione del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/)"
+    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/)"
    ]
   },
   {
