--- a/cursos/espanol/deeplearning/RAG.ipynb
+++ b/cursos/espanol/deeplearning/RAG.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "Esta unidad es un resumen traducido con algunas modificacione del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/)"
+    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/)"
    ]
   },
   {
